--- a/src/Components/Cart/cart.module.css
+++ b/src/Components/Cart/cart.module.css
@@ -10,11 +10,11 @@ p{
     border: 1px solid #E2E2E2;
     box-sizing: border-box;
     border-radius: 18px;
-    padding: 10px 20px;
+    padding:15px;
 }
 .cartContainer img{
-    width: 210px;
-    height: 200px;
+    width: 150px;
+    height: 120px;
 }
 .cartContainer .title{
     font-weight: 500;
