--- a/src/Pages/ProductAll/productAll.module.css
+++ b/src/Pages/ProductAll/productAll.module.css
@@ -1,7 +1,13 @@
-.productAll .selectFormComponents{
+.productAll{
+
+}
+
+.selectFormComponents{
 display: flex;
 justify-content: space-around;
 margin-bottom: 40px;
+
+
 }
 /* .productAll .selectBox{
     width: 20%;
@@ -20,4 +26,16 @@ margin-bottom: 40px;
 
 .productAll .customRow [class*="col-"] {
     margin-bottom: 10px;
+}
+
+.product_div{
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+.product_cart{
+    width:15%;
+    height: 220px;
+    margin: 15px;
 }
