--- a/src/Components/Navbar/TopNavWithSearch/WithSearch.module.css
+++ b/src/Components/Navbar/TopNavWithSearch/WithSearch.module.css
@@ -1,29 +1,33 @@
 .topnav{
-    height: 55px;
     background: #219653;
-    display: flex;
-    align-items: center;
-    padding: 5px 20px 5px 20px;
-    justify-content:space-between;
+    /* padding: 5px 20px 5px 20px; */
+    
+}
+.navbar{
+    height: 60px; 
 }
 .drawer_btn{
     display: flex;
     align-items:center;
-    justify-content: center;
     background:transparent;
     border-style: none;
 }
 .drawer_btn img{
-    height:30px;
-    object-fit: contain;
+    width: 30px;
+    height: 30px;
 }
 .logo{
-    height:35px;
-    object-fit: contain;   
+    height: 39px; 
+    margin-left: 50px; 
+    object-fit: contain
 }
+
 .search_bar{
     width:50%;
+    margin-left:150px;
 }
+
+
 .user_log{
     display: flex;
     align-items: center;
@@ -33,7 +37,7 @@
     text-decoration: none;
 }
 .user_log img{
-    height:25px;
+    height: 25px;
     object-fit: contain;
 }
 .user_log p{
