--- a/src/index.css
+++ b/src/index.css
@@ -67,3 +67,12 @@ code {
 
 
 
+.custom-container {
+  max-width:  1330px;
+}
+
+@media (max-width: 991px) {
+  .custom-container {
+    max-width: 100%
+  }
+}
