--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-size: 24px;
   font-weight: 400;
-  background-color: #ffffff;
+  background-color: #F6F6F6;
 }
 
 body.BackDropOpenPreventScroll {
